--- a/notebooks/Polymorphism.ipynb
+++ b/notebooks/Polymorphism.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -441,13 +441,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
+    "scrolled": false,
     "slideshow": {
      "slide_type": "slide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Draw circle\n",
+      "The radius is 0\n"
+     ]
+    }
+   ],
    "source": [
     "{\n",
     "    Circle c;\n",
@@ -455,23 +465,34 @@
     "    cptr->draw();\n",
     "    Shape* sptr{&c};\n",
     "    ((Circle*)sptr)->radius();\n",
+    "    //sptr->radius(); //error\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The radius is 8.48668e-08\n"
+     ]
+    }
+   ],
    "source": [
     "{\n",
     "    Shape s;\n",
     "    // Wrong!!!\n",
-    "    ((Circle*)&s)->radius();\n",
+    "    Circle* q = (Circle*) &s;\n",
+    "    q->radius();\n",
+    "    //((Circle*)&s)->radius();\n",
     "}"
    ]
   },
@@ -496,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -512,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -530,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -548,13 +569,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Draw circle\n",
+      "Draw square\n",
+      "Draw circle\n",
+      "Draw square\n"
+     ]
+    }
+   ],
    "source": [
     "{\n",
     "    // Create derived-class objects\n",
@@ -619,10 +651,36 @@
     "\n",
     "- If a program invokes a **virtual** function through a base-class pointer to a derived-class object or a base-class reference to a derived-class, the program will choose the correct derived-class function dynamically, at runtime, based on the **object type** - not the pointer or reference type.\n",
     "    - Known as **dynamic binding** or **late binding**.\n",
-    "    - Late binding requires some overhead but provides increased power and flexibility.\n",
-    "    \n",
-    "- When a virtual function is called by referencing a specific object by name and using the dot member-selection operator, the function invocation is re-solved at compile time (this is called static binding) and the virtual function that is called is the one defined for (or inherited by) the class of that particular object - this is not polymorphic behavior.\n",
-    "    - Dynamic binding with virtual functions occurs **only** off pointers and references"
+    "    - Late binding requires some overhead but provides increased power and flexibility.    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Late Binding (cont.)\n",
+    "\n",
+    "When a virtual function is called\n",
+    "1. by **referencing** a specific object **by name** and using the **dot** member-selection operator\n",
+    "2. the function invocation is resolved at **compile time**\n",
+    "    - this is called static binding\n",
+    "3. and the called virtual function is the one defined for (or inherited by) the class of that particular object\n",
+    "    - this is not polymorphic behavior."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "Dynamic binding with virtual functions occurs **only** off pointers and references"
    ]
   },
   {
@@ -753,11 +811,209 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
-    "Now, if an object in the hierarchy is destroyed explicitly by applying the delete operator to a base-class pointer, the destructor for the appropriate class is called based on the object to which the base-class pointer points.\n",
-    "Remember, when a derived-class object is destroyed, the base-class part of the derived-class object is also destroyed, so it’s important for the destructors of both the derived and base classes to execute.\n",
-    "The base-class destructor automatically executes after the derived-class destructor."
+    "- Now, if an object in the hierarchy is destroyed explicitly by applying the delete operator to a **base-class pointer**, the destructor for the **appropriate class** is called based on the object to which the base-class pointer points.\n",
+    "- Remember, when a derived-class object is destroyed, the base-class part of the derived-class object is also destroyed, so it's important for the destructors of both the derived and base classes to execute.\n",
+    "- The base-class destructor automatically executes after the derived-class destructor.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "- If a class has *virtual functions*, **always** provide a *virtual destructor*, even if one is not required for the class. This ensures that a custom derived-class destructor (if there is one) will be invoked when a derived-class object is deleted via a base-class pointer.\n",
+    "- *Constructors* **cannot be** virtual. Declaring a constructor virtual is a compilation error."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "Destructor definition also may be written as follows:\n",
+    "```c++\n",
+    "virtual ~Shape3D() = default;\n",
+    "```\n",
+    "\n",
+    "You can tell the compiler to **explicitly generate** the default version of a default:\n",
+    "- constructor\n",
+    "- copy constructor\n",
+    "- move constructor\n",
+    "- copy assignment operator\n",
+    "- move assignment operator\n",
+    "- destructor\n",
+    "\n",
+    "by following the special member function's prototype with `= default`. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "## `default` keyword\n",
+    "\n",
+    "- Useful, for example, when you explicitly define a constructor for a class and still want the compiler to generate a default constructor as well in that case, add the following declaration to your class definition:\n",
+    "\n",
+    "```c++\n",
+    "ClassName() = default;\n",
+    "```\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Final Member Functions\n",
+    "\n",
+    "In C++11, a base-class virtual function that's declared **final** in its prototype\n",
+    "- **cannot** be overridden in any derived class, e.g.\n",
+    "```c++\n",
+    "virtual someFunction(params) final;\n",
+    "```\n",
+    "- Guarantees that the base class's final member function definition will be used by all base-class objects and by all objects of the base class's direct and indirect derived classes.\n",
+    "- Attempting to override a final member function results in a compilation error."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Final Classes\n",
+    "\n",
+    "You can declare a **class** as `final` to **prevent** it from being **used as a base class**, as in\n",
+    "```c++\n",
+    "// this class cannot be used as a base class\n",
+    "class MyClass final {\n",
+    "    // class body\n",
+    "};\n",
+    "```\n",
+    "- Attempting to inherit from a final base class results in a compilation error."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Abstract Classes\n",
+    "\n",
+    "- There are cases in which it's useful to define **classes from which you never intend to instantiate any objects**.\n",
+    "- Such classes are called **abstract classes**.\n",
+    "- Because these classes normally are used as base classes in inheritance hierarchies, we refer to them as **abstract base classes**.\n",
+    "- Cannot be used to instantiate objects, because they are **incomplete** - derived classes must define the \"missing pieces.\"\n",
+    "- An abstract class is a base class from which other classes can inherit.\n",
+    "- Classes that can be used to instantiate objects are **concrete classes**.\n",
+    "- Such classes define **every** member function they declare."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Abstract Classes (cont.)\n",
+    "\n",
+    "- Abstract base classes are **too generic** to define real objects;\n",
+    "    - we need to be more specific before we can think of instantiating objects.\n",
+    "- For example, if someone tells you to \"draw the two-dimensional shape\", what shape would you draw?\n",
+    "- Concrete classes provide the specifics that make it possible to instantiate objects."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Pure `virtual` Functions\n",
+    "\n",
+    "- A class is made **abstract** by declaring **one or more** of its virtual functions to be **\"pure.\"**\n",
+    "    - A pure virtual function is specified by placing **\"= 0\"** in its declaration, as in\n",
+    "```c++\n",
+    "virtual void draw() = 0;\n",
+    "```\n",
+    "- The `= 0` is a pure specifier.\n",
+    "- Pure virtual functions typically **do not provide implementations**, though they can."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Pure `virtual` Functions (cont.)\n",
+    "\n",
+    "- Each **concrete** derived class **must override all** base-class **pure virtual functions** with concrete implementations of those functions; otherwise the derived class is also abstract.\n",
+    "- The difference between a `virtual` function and a pure `virtual` function is that a `virtual` function **has** an implementation and gives the derived class the **option** of overriding the function.\n",
+    "- By contrast, a pure virtual function **does not have** an implementation and **requires** the derived class to override the function for that derived class to be concrete; otherwise the derived class remains **abstract**.\n",
+    "- Pure virtual functions are used when it **does not make sense** for the base class to have an implementation of a function, but you want all concrete derived classes to implement the function."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Software Engineering: Interfaces\n",
+    "\n",
+    "- An **abstract class** defines a common **public interface** for the various classes that derive from it in a class hierarchy.\n",
+    "    - An abstract class contains one or more pure virtual functions that concrete derived classes must override.        \n",
+    "- An abstract class has at least one pure virtual function.\n",
+    "- An abstract class also can have data members and concrete functions (including constructors and destructors), which are subject to the normal rules of inheritance by derived classes.\n",
+    "- Failure to override a pure virtual function in a derived class makes that class abstract.\n",
+    "    - Attempting to instantiate an object of an abstract class causes a compilation error."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Abstract Classes (cont.)\n",
+    "\n",
+    "- Although we cannot instantiate objects of an abstract base class, we **can use** the abstract base class to **declare pointers and references** that can refer to objects of any **concrete** classes derived from the abstract class.\n",
+    "- Programs typically use such pointers and references to manipulate derived-class objects polymorphically."
    ]
   }
  ],
