--- a/notebooks/Lab 1.ipynb
+++ b/notebooks/Lab 1.ipynb
@@ -39,10 +39,10 @@
     "    - Create a constructor that accepts one parameter which is used to initialize a class object.\n",
     "    - Overload the division operator ( `/` ) to divide two `Real`s.\n",
     "- Derive a class `Complex` from `Real` and add additional data member for the imaginary part of the number (10 pts).\n",
-    "    - Create a constructor that accepts two parameters which is used to initialize a class object.\n",
+    "    - Create a constructor that accepts two parameters which are used to initialize a class object.\n",
     "    - Overload the multiplication operator ( `*` ) to multiply two `Complex` numbers.\n",
     "- Derive a class `Polynomial` from `Complex` and add additional data member for the the exponents of algebraic coefficients (10 pts).\n",
-    "    - Create a constructor that accepts three parameters which is used to initialize a class object.\n",
+    "    - Create a constructor that accepts three parameters which are used to initialize a class object.\n",
     "    - Overload the addition operator ( `+` ) to add two `Polynomial`s.\n",
     "- For every class the stream insertion `<<` operator functions as **friend** functions (10 pts). \n",
     "    - The stream insertion operator should not be able to display if an input error occurred.\n",
