added example of an abstract class

--- a/notebooks/Polymorphism.ipynb
+++ b/notebooks/Polymorphism.ipynb
@@ -969,6 +969,120 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "#include <iostream>\n",
+    "using namespace std;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "// abstract class\n",
+    "class CommunityMember {\n",
+    "public:\n",
+    "    CommunityMember() { cout << \"Create a community member\"  << endl; }\n",
+    "    virtual ~CommunityMember(){ cout << \"Destroy a community member\" << endl; }\n",
+    "    \n",
+    "    virtual void act() = 0; // pure virtual function\n",
+    "};"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "// concrete class\n",
+    "class Employee : public CommunityMember {\n",
+    "public:\n",
+    "    Employee() : CommunityMember() { cout << \"Create an employee\" << endl; }\n",
+    "    ~Employee(){ cout << \"Destroy an employee\" << endl; }\n",
+    " \n",
+    "    void act() { cout << \"I'm an employee\" << endl; }\n",
+    "};"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "// concrete class\n",
+    "class Faculty : public Employee {\n",
+    "public:\n",
+    "    Faculty() : Employee() { cout << \"Create a faculty\" << endl; }\n",
+    "    ~Faculty(){ cout << \"Destroy a faculty\" << endl; }\n",
+    " \n",
+    "    void act() { cout << \"I'm a faculty\" << endl; }\n",
+    "};"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Create a community member\n",
+      "Create an employee\n",
+      "Create a community member\n",
+      "Create an employee\n",
+      "Create a faculty\n",
+      "I'm an employee\n",
+      "I'm a faculty\n",
+      "Destroy an employee\n",
+      "Destroy a community member\n",
+      "Destroy a faculty\n",
+      "Destroy an employee\n",
+      "Destroy a community member\n"
+     ]
+    }
+   ],
+   "source": [
+    "{\n",
+    "    vector<CommunityMember* > members{new Employee(), new Faculty()};\n",
+    "    \n",
+    "    for(auto m : members)\n",
+    "        m->act();\n",
+    "\n",
+    "    for(auto m : members)\n",
+    "        delete m;\n",
+    "}"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
