--- a/notebooks/Polymorphism.ipynb
+++ b/notebooks/Polymorphism.ipynb
@@ -685,7 +685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -695,14 +695,14 @@
    "source": [
     "class Shape3D {\n",
     "public:\n",
-    "    virtual void draw() { cout << \"Draw 3D shape\" << endl; }\n",
+    "     virtual void draw() { cout << \"Draw 3D shape\" << endl; }\n",
     "    ~Shape3D() { cout << \"Destroy 3D shape\" << endl; }\n",
     "};"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -719,13 +719,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Draw 3D shape\n",
+      "Destroy 3D shape\n",
+      "Draw cube\n",
+      "Destroy 3D shape\n"
+     ]
+    }
+   ],
    "source": [
     "{\n",
     "    Shape3D* sptr = new Shape3D();\n",
@@ -756,7 +767,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "#include <iostream>\n",
+    "using namespace std;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -773,7 +798,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -790,13 +815,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Draw 3D shape\n",
+      "Destroy 3D shape\n",
+      "Draw cube\n",
+      "Destroy cube\n",
+      "Destroy 3D shape\n"
+     ]
+    }
+   ],
    "source": [
     "{\n",
     "    Shape3D* sptr = new Shape3D();\n",
@@ -831,7 +868,8 @@
    },
    "source": [
     "- If a class has *virtual functions*, **always** provide a *virtual destructor*, even if one is not required for the class. This ensures that a custom derived-class destructor (if there is one) will be invoked when a derived-class object is deleted via a base-class pointer.\n",
-    "- *Constructors* **cannot be** virtual. Declaring a constructor virtual is a compilation error."
+    "- *Constructors* **cannot be** virtual.\n",
+    "    - Declaring a constructor virtual is a compilation error."
    ]
   },
   {
