update of AC example

--- a/notebooks/Polymorphism.ipynb
+++ b/notebooks/Polymorphism.ipynb
@@ -1042,10 +1042,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1minput_line_13:3:21: \u001b[0m\u001b[0;1;31merror: \u001b[0m\u001b[1mvariable type 'CommunityMember' is an abstract class\u001b[0m\n",
+      "    CommunityMember cm;\n",
+      "\u001b[0;1;32m                    ^\n",
+      "\u001b[0m"
+     ]
+    },
+    {
+     "ename": "Interpreter Error",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "Interpreter Error: "
+     ]
+    }
+   ],
+   "source": [
+    "{\n",
+    "    CommunityMember cm;\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
     }
    },
    "outputs": [],
@@ -1090,21 +1124,24 @@
    },
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Create a community member\n",
-      "Create an employee\n",
-      "Create a community member\n",
-      "Create an employee\n",
-      "Create a faculty\n",
-      "I'm an employee\n",
-      "I'm a faculty\n",
-      "Destroy an employee\n",
-      "Destroy a community member\n",
-      "Destroy a faculty\n",
-      "Destroy an employee\n",
-      "Destroy a community member\n"
+      "\u001b[1minput_line_12:3:21: \u001b[0m\u001b[0;1;31merror: \u001b[0m\u001b[1mvariable type 'CommunityMember' is an abstract class\u001b[0m\n",
+      "    CommunityMember cm;\n",
+      "\u001b[0;1;32m                    ^\n",
+      "\u001b[0m\u001b[1minput_line_9:7:18: \u001b[0m\u001b[0;1;30mnote: \u001b[0munimplemented pure virtual method 'act' in 'CommunityMember'\u001b[0m\n",
+      "    virtual void act() = 0; // pure virtual function\n",
+      "\u001b[0;1;32m                 ^\n",
+      "\u001b[0m"
+     ]
+    },
+    {
+     "ename": "Interpreter Error",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "Interpreter Error: "
      ]
     }
    ],
@@ -1117,6 +1154,59 @@
     "\n",
     "    for(auto m : members)\n",
     "        delete m;\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "// derived abstract class\n",
+    "class Student : public CommunityMember {\n",
+    "public:\n",
+    "    Student() : CommunityMember() { cout << \"Create a faculty\" << endl; }\n",
+    "    ~Student(){ cout << \"Destroy a faculty\" << endl; }\n",
+    " \n",
+    "    //void act() { cout << \"I'm a faculty\" << endl; }\n",
+    "};"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1minput_line_18:3:13: \u001b[0m\u001b[0;1;31merror: \u001b[0m\u001b[1mvariable type 'Student' is an abstract class\u001b[0m\n",
+      "    Student s;\n",
+      "\u001b[0;1;32m            ^\n",
+      "\u001b[0m\u001b[1minput_line_9:7:18: \u001b[0m\u001b[0;1;30mnote: \u001b[0munimplemented pure virtual method 'act' in 'Student'\u001b[0m\n",
+      "    virtual void act() = 0; // pure virtual function\n",
+      "\u001b[0;1;32m                 ^\n",
+      "\u001b[0m"
+     ]
+    },
+    {
+     "ename": "Interpreter Error",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "Interpreter Error: "
+     ]
+    }
+   ],
+   "source": [
+    "{\n",
+    "    Student s;\n",
     "}"
    ]
   },
