updated sim2 description

--- a/notebooks/Simulation2.ipynb
+++ b/notebooks/Simulation2.ipynb
@@ -209,7 +209,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## `Animal.cpp`"
+    "## `Animal.cpp`\n",
+    "\n",
+    "Now, provide implementation of added functional members\n",
+    "\n",
+    "- In the constructor, create explicitly `initNumParasiteCells` parasite objects with some parameters (lines 5-6)\n",
+    "- In the destructor, delete explicitly all parasite objects (lines 12-13), and shrink collection to 0 (line 14)\n",
+    "- Implement `[]` operator, by returning corresponding `Parasite` object from the internal `parasites` collection checking whether index is within the appropriate range (line 20-21)\n",
+    "- Implement output stream operation (lines 33-37)"
    ]
   },
   {
@@ -220,16 +227,14 @@
    "source": [
     "#include \"Animal.h\"\n",
     "\n",
-    "Animal::Animal(float initImmunity, int initNumParasiteCells) : immunity(initImmunity)\n",
-    "{\n",
+    "Animal::Animal(float initImmunity, int initNumParasiteCells) : immunity(initImmunity) {\n",
     "    // create parasite object in the animal object\n",
     "    for (int i=0; i<initNumParasiteCells; ++i)\n",
-    "        parasites.push_back(new Parasite{0.1, 0.1});\n",
+    "        parasites.push_back( new Parasite{0.1, 0.1} );\n",
     "    cout << \"Animal object is created\" << endl;\n",
     "}\n",
     "\n",
-    "Animal::~Animal()\n",
-    "{\n",
+    "Animal::~Animal() {\n",
     "    // delete parasite objects fromthe animal object\n",
     "    for (int i=0; i<getParasiteNumber(); ++i)\n",
     "        delete parasites[i];\n",
@@ -237,20 +242,18 @@
     "    cout << \"Animal object is deleted\" << endl;\n",
     "}\n",
     "\n",
-    "Parasite* Animal::operator[](int i)\n",
-    "{\n",
+    "Parasite* Animal::operator[](int i) {\n",
     "    // check it index within the range\n",
     "    if(i >= 0 && i < getParasiteNumber())\n",
     "        return parasites[i];\n",
     "    return nullptr;\n",
     "}\n",
     "\n",
-    "\n",
-    "float Animal::getImmunity(){\n",
+    "float Animal::getImmunity() {\n",
     "    return immunity;\n",
     "}\n",
     "\n",
-    "int Animal::getParasiteNumber(){\n",
+    "int Animal::getParasiteNumber() {\n",
     "    return parasites.size();\n",
     "}\n",
     "\n",
