--- a/notebooks/Lab 2.ipynb
+++ b/notebooks/Lab 2.ipynb
@@ -28,10 +28,10 @@
     "\n",
     "Write a program that accomplishes each of the following:\n",
     "\n",
-    "- Create a user-defined **abstract** class `VectorSpace` that has two pure functions (5 pts):\n",
+    "- Create a user-defined **abstract** class `VectorSpace` that has two pure virtual functions (5 pts):\n",
     "    - `to_string` which returns a string representation of the class object\n",
     "    - `norm` which returns a norm of the class object\n",
-    "    - Implement `virtual` destructor\n",
+    "    - Define `virtual` destructor\n",
     "- Create a user-defined class `Real` from `VectorSpace` that has a *protected* data member that would contain a value of the real number (10 pts).\n",
     "    - Create a constructor that accepts one parameter which is used to initialize a class object.\n",
     "    - Override `norm` & `to_string` function in this derived class.\n",
