--- a/notebooks/Lab 2.ipynb
+++ b/notebooks/Lab 2.ipynb
@@ -28,20 +28,20 @@
     "\n",
     "Write a program that accomplishes each of the following:\n",
     "\n",
-    "- Create a user-defined **abstract** class `VectorSpace` that has two pure virtual functions (5 pts):\n",
+    "- Create a user-defined **abstract** class `VectorSpace` that has pure virtual functions (5 pts):\n",
     "    - `to_string` which returns a string representation of the class object\n",
     "    - `norm` which returns a norm of the class object\n",
     "    - Define `virtual` destructor\n",
-    "- Create a user-defined class `Real` from `VectorSpace` that has a *protected* data member that would contain a value of the real number (10 pts).\n",
+    "- Create a user-defined class `Real` derived from `VectorSpace` that has a *protected* data member that would contain a value of the real number (10 pts).\n",
     "    - Create a constructor that accepts one parameter which is used to initialize a class object.\n",
     "    - Override `norm` & `to_string` function in this derived class.\n",
-    "- Derive a class `Complex` from `Real` and add additional data member for the imaginary part of the number (10 pts).\n",
+    "- Derive a class `Complex` derived from `Real` and add additional data member for the imaginary part of the number (10 pts).\n",
     "    - Create a constructor that accepts two parameters which are used to initialize a class object.\n",
     "    - Implement required methods.\n",
-    "- Derive a class `Polynomial` from `Complex` and add additional data member for the the exponents of algebraic coefficients (10 pts).\n",
+    "- Derive a class `Polynomial` derived from `Complex` and add additional data member for the the exponents of algebraic coefficients (10 pts).\n",
     "    - Create a constructor that accepts three parameters which are used to initialize a class object.\n",
     "    - Implement required methods.\n",
-    "- Create a user-defined class `Vector` from `VectorSpace` that has a *protected* data member that would contain a real vector values (10 pts).\n",
+    "- Create a user-defined class `Vector` derived from `VectorSpace` that has a *protected* data member that would contain a real vector values (10 pts).\n",
     "    - Use vector data type for keeping elements of the `Vector` class\n",
     "    - Create a constructor that accepts three parameter which are used to initialize a class object.\n",
     "    - Create a destructor that clears internal `vector`-base data storage.\n",
