--- a/notebooks/Lab 2.ipynb
+++ b/notebooks/Lab 2.ipynb
@@ -56,6 +56,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Additional Problem\n",
+    "\n",
+    "- Create a user-defined class `RealVector` derived from `VectorSpace` that has a *protected* data member that would contain a `Real` vector values (10 pts).\n",
+    "    - Use vector data type for keeping elements of the `Vector` class\n",
+    "    - Create a constructor that accepts three parameter which are used to initialize a class object.\n",
+    "    - Create a destructor that clears internal `vector`-base data storage.\n",
+    "    - Allocate and deallocate `Real` values explicitly.\n",
+    "    - Implement required methods.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Test Driver"
    ]
   },
