--- a/notebooks/Templates.ipynb
+++ b/notebooks/Templates.ipynb
@@ -13,6 +13,7 @@
     "#include <vector>\n",
     "#include <iostream>\n",
     "#include <stdexcept> // stdexcept header contains runtime_error\n",
+    "#include <deque>\n",
     "using namespace std; "
    ]
   },
@@ -76,31 +77,28 @@
    "execution_count": 2,
    "metadata": {
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "slide"
     }
    },
    "outputs": [],
    "source": [
     "template <typename T>\n",
-    "class Animal {\n",
-    "    float immunity;      // degree of immunity, in %\n",
-    "    vector<T> parasites; // collection of parasites\n",
+    "class Stack {\n",
     "public:\n",
-    "    Animal(float initImmunity): immunity{initImmunity} {};\n",
-    "    \n",
-    "    // access to encapsulated fields\n",
-    "    float getImmunity() { return immunity; }\n",
-    "    int getParasiteNumber() { return parasites.size(); }\n",
-    "    \n",
-    "    void addParasite(const T& p) {\n",
-    "        parasites.push_back(p);\n",
+    "    // return the top element of the Stack\n",
+    "    const T& top() {\n",
+    "        return stack.front();\n",
     "    }\n",
-    "        \n",
-    "    T& getParasite(unsigned int i){\n",
-    "        if (i < 0 || i >= getParasiteNumber())\n",
-    "            throw runtime_error{\"invalid parasite index\"};\n",
-    "        return parasites[i];\n",
+    "    // push an element onto the Stack\n",
+    "    void push(const T& value) {\n",
+    "        stack.push_front(value);\n",
     "    }\n",
+    "    // pop an element from the stack\n",
+    "    void pop() {\n",
+    "        stack.pop_front();\n",
+    "    }\n",
+    "private:\n",
+    "    deque<T> stack; // internal representation of the Stack    \n",
     "};"
    ]
   },
@@ -158,8 +156,8 @@
     "\n",
     "```c++\n",
     "template <typename T>\n",
-    "void Animal::addParasite(const T& p) {\n",
-    "    parasites.push_back(p);\n",
+    "void Stack::push(const T& p) {\n",
+    "    stack.push_front(p);\n",
     "}\n",
     "```"
    ]
@@ -177,28 +175,50 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Parasite a1: P\n",
-      "Parasite a2: Q\n",
-      "Parasite b1: 10\n",
-      "Parasite b2: 20\n"
+      "Stack top element is Q\n",
+      "Stack top element is P\n"
      ]
     }
    ],
    "source": [
     "{\n",
-    "    Animal<char> a{0.1};\n",
-    "    a.addParasite('P');\n",
-    "    a.addParasite('Q');\n",
+    "    Stack<char> s;\n",
+    "    s.push('P');\n",
+    "    s.push('Q');\n",
     "    \n",
-    "    cout << \"Parasite a1: \" << a.getParasite(0) << endl;\n",
-    "    cout << \"Parasite a2: \" << a.getParasite(1) << endl;\n",
+    "    cout << \"Stack top element is \" << s.top() << endl;\n",
+    "    s.pop();\n",
+    "    cout << \"Stack top element is \" << s.top() << endl;    \n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Stack top element is 20\n",
+      "Stack top element is 10\n"
+     ]
+    }
+   ],
+   "source": [
+    "{\n",
+    "    Stack<int> s;\n",
+    "    s.push(10);\n",
+    "    s.push(20);\n",
     "    \n",
-    "    Animal<int> b{0.1};\n",
-    "    b.addParasite(10);\n",
-    "    b.addParasite(20);\n",
-    "    \n",
-    "    cout << \"Parasite b1: \" << b.getParasite(0) << endl;\n",
-    "    cout << \"Parasite b2: \" << b.getParasite(1) << endl;\n",
+    "    cout << \"Stack top element is \" << s.top() << endl;\n",
+    "    s.pop();\n",
+    "    cout << \"Stack top element is \" << s.top() << endl;    \n",
     "}"
    ]
   },
@@ -218,7 +238,7 @@
     "```c++\n",
     "template <class T, size_t N>\n",
     "```    \n",
-    "    - Recall that keywords class and typename are interchangeable in template declarations."
+    "    - Recall that keywords class and typename are **interchangeable** in template declarations."
    ]
   },
   {
@@ -239,6 +259,308 @@
     "\n",
     "- The array class template encapsulates a **built-in array**.\n",
     "- When you create an array class-template specialization, the array's built-in array data member has the type and size specified in the declaration."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "template <typename T, size_t N>\n",
+    "class FixedStack {\n",
+    "public:\n",
+    "    // return the top element of the Stack\n",
+    "    const T& top() {\n",
+    "        return stack.front();\n",
+    "    }\n",
+    "    // push an element onto the Stack\n",
+    "    void push(const T& value) {\n",
+    "        if (stack.size() < N)\n",
+    "            stack.push_front(value);\n",
+    "        else\n",
+    "            throw runtime_error{\"Stack is full\"}; // no print\n",
+    "    }\n",
+    "    // pop an element from the stack\n",
+    "    void pop() {\n",
+    "        stack.pop_front();\n",
+    "    }\n",
+    "private:\n",
+    "    deque<T> stack; // internal representation of the Stack    \n",
+    "};"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Added 'A' to stack\n",
+      "Added 'B' to stack\n"
+     ]
+    },
+    {
+     "ename": "Standard Exception",
+     "evalue": "Stack is full",
+     "output_type": "error",
+     "traceback": [
+      "Standard Exception: Stack is full"
+     ]
+    }
+   ],
+   "source": [
+    "{\n",
+    "    FixedStack<char, 2> s;\n",
+    "    s.push('A'); cout << \"Added 'A' to stack\" << endl;\n",
+    "    s.push('B'); cout << \"Added 'B' to stack\" << endl;    \n",
+    "    s.push('C'); cout << \"Added 'C' to stack\" << endl;\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Default Arguments for Template Type Parameters\n",
+    "\n",
+    "- In addition, a type parameter can specify a **default type argument**.\n",
+    "- For example, the C++ standard's stack container adapter class template begins with:\n",
+    "```c++\n",
+    "template <typename T, class Container = deque<T>>\n",
+    "```\n",
+    "- which specifies that a stack uses a `deque` by default to store the stack's elements of type `T`.\n",
+    "\n",
+    "- **Default type parameters** must be the **rightmost** (trailing) parameters in a template's type-parameter list.\n",
+    "    - When you instantiate a template with two or more default arguments, if an omitted argument is not the rightmost, then all type parameters to the right of it also must be omitted.\n",
+    "    - As of C++11, you can now use default type arguments for template type parameters in function templates."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "template <typename T, class Container=deque<T>>\n",
+    "class CustomStack {\n",
+    "public:\n",
+    "    // return the top element of the Stack\n",
+    "    const T& top() {\n",
+    "        return stack.back();\n",
+    "    }\n",
+    "    // push an element onto the Stack\n",
+    "    void push(const T& value) {\n",
+    "        stack.push_back(value);\n",
+    "    }\n",
+    "    // pop an element from the stack\n",
+    "    void pop() {\n",
+    "        stack.pop_back();\n",
+    "    }\n",
+    "    sting\n",
+    "private:\n",
+    "    Container stack; // internal representation of the Stack    \n",
+    "};"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Stack top element is P\n"
+     ]
+    }
+   ],
+   "source": [
+    "{\n",
+    "    CustomStack<char> s;\n",
+    "    s.push('P');\n",
+    "    cout << \"Stack top element is \" << s.top() << endl;\n",
+    "    s.pop();\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Stack top element is P\n"
+     ]
+    }
+   ],
+   "source": [
+    "{\n",
+    "    CustomStack<char, vector<char>> s;\n",
+    "    s.push('P');\n",
+    "    cout << \"Stack top element is \" << s.top() << endl;\n",
+    "    s.pop();\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "24"
+     ]
+    }
+   ],
+   "source": [
+    "{\n",
+    "    CustomStack<char, vector<char>> s;\n",
+    "    cout << sizeof(s);\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Overloading Function Templates\n",
+    "\n",
+    "- When overloaded functions perform **identical** operations on **different** types of data, they can be expressed more compactly and conveniently using function templates.\n",
+    "- You can then write function calls with different types of arguments and let the compiler generate separate **function-template specializations** to handle each function call appropriately.\n",
+    "- The function-template specializations generated from a given function template all have the same name, so the compiler uses overload resolution to invoke the proper function."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Overloading Function Templates (cont.)\n",
+    "\n",
+    "- You may also **overload** function templates.\n",
+    "- For example, you can provide other function templates that specify the **same** function name but **different** function parameters.\n",
+    "- A function template also can be overloaded by providing nontemplate functions with the same function name but different function parameters."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "template <typename T> \n",
+    "T mymax(T x, T y) { \n",
+    "   return (x > y) ? x: y; \n",
+    "} "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "20"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mymax(10,20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'b'"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mymax('a','b')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Matching Process for Overloaded Functions\n",
+    "- The compiler performs a matching process to determine what function to call when a function is invoked.\n",
+    "- It looks at both existing functions and function templates to locate a function or generate a function-template specialization whose function name and argument types are consistent with those of the function call.\n",
+    "- If there are no matches, the compiler issues an error message. If there are multiple matches for the function call, the compiler attempts to determine the best match.\n",
+    "- If there's more than one best match, the call is ambiguous and the compiler issues an error message."
    ]
   }
  ],
