--- a/notebooks/Lab 3.ipynb
+++ b/notebooks/Lab 3.ipynb
@@ -28,7 +28,7 @@
     "\n",
     "Write a program that accomplishes each of the following:\n",
     "\n",
-    "- Write a **one** function template that calculates a distance between points (10 pts).\n",
+    "- Write a **one** function template  `distance` that calculates a distance between points and returns it as a `double` value (10 pts).\n",
     "- Your code have to be compiled without errors (2 pts).\n",
     "- Test you code using the provided test driver (3 pts)."
    ]
