--- a/notebooks/Templates.ipynb
+++ b/notebooks/Templates.ipynb
@@ -232,7 +232,7 @@
    "source": [
     "## Nontype Parameters\n",
     "\n",
-    "- Class template `Animal` used only a type parameter in its template declaration.\n",
+    "- Class template `Stack` used only a type parameter in its template declaration.\n",
     "- It's also possible to use **nontype template parameters**, which can have default arguments and are treated as constants.\n",
     "- For example, the C++ standard’s array class template begins with the template declaration:\n",
     "```c++\n",
@@ -283,7 +283,7 @@
     "        if (stack.size() < N)\n",
     "            stack.push_front(value);\n",
     "        else\n",
-    "            throw runtime_error{\"Stack is full\"}; // no print\n",
+    "            throw runtime_error{\"Stack is full\"};\n",
     "    }\n",
     "    // pop an element from the stack\n",
     "    void pop() {\n",
@@ -376,7 +376,6 @@
     "    void pop() {\n",
     "        stack.pop_back();\n",
     "    }\n",
-    "    sting\n",
     "private:\n",
     "    Container stack; // internal representation of the Stack    \n",
     "};"
@@ -384,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -410,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -431,26 +430,6 @@
     "    s.push('P');\n",
     "    cout << \"Stack top element is \" << s.top() << endl;\n",
     "    s.pop();\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "24"
-     ]
-    }
-   ],
-   "source": [
-    "{\n",
-    "    CustomStack<char, vector<char>> s;\n",
-    "    cout << sizeof(s);\n",
     "}"
    ]
   },
@@ -486,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -502,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -515,7 +494,7 @@
        "20"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -526,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 12,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -539,7 +518,7 @@
        "'b'"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
