--- a/notebooks/Exceptions.ipynb
+++ b/notebooks/Exceptions.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -96,6 +96,7 @@
    "source": [
     "{\n",
     "    int* myarray= new int[1000000000000];\n",
+    "    cout << \"Done!\";\n",
     "}"
    ]
   },
@@ -143,7 +144,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "This is an exception: std::bad_alloc\n"
+      "This is an exception: std::bad_alloc\n",
+      "Done!"
      ]
     }
    ],
@@ -155,7 +157,8 @@
     "catch (bad_alloc& e)\n",
     "{\n",
     "    cout << \"This is an exception: \" << e.what() << '\\n';\n",
-    "}"
+    "}\n",
+    "cout << \"Done!\";"
    ]
   },
   {
@@ -213,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -232,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -253,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -264,7 +267,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Exception occurred: attempted to divide by zero\n"
+      "Exception occurred: attempted to divide by zero\n",
+      "Done!"
      ]
     }
    ],
@@ -278,6 +282,7 @@
     "    catch (const DivideByZeroException& divideByZeroException) {\n",
     "        cout << \"Exception occurred: \" << divideByZeroException.what() << endl;\n",
     "    }\n",
+    "    cout << \"Done!\";\n",
     "}"
    ]
   },
@@ -383,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -408,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -463,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -475,12 +480,13 @@
     "void function2() {\n",
     "    cout << \"`throwException` is called inside `function2`\" << endl;\n",
     "    throwException(); // stack unwinding occurs, return control to function1\n",
+    "    cout << \"Done f2\";\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -492,18 +498,35 @@
     "void function1() {\n",
     "    cout << \"`function2` is called inside `function1`\" << endl;\n",
     "    function2(); // stack unwinding occurs, return control to main\n",
+    "    cout << \"Done f1\";\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "`function1` is called\n",
+      "`function2` is called inside `function1`\n",
+      "`throwException` is called inside `function2`\n",
+      " Function `throwException` throws an exception\n",
+      " Exception handled in function `throwException`\n",
+      " Function `throwException` rethrows exception\n",
+      "\n",
+      "Exception occurred: std::exception\n",
+      "Exception handled\n"
+     ]
+    }
+   ],
    "source": [
     "{\n",
     "    // invoke function1\n",
@@ -512,7 +535,7 @@
     "        function1(); // call function1 which throws runtime_error\n",
     "    }\n",
     "    catch (const exception& error) { // handle runtime error\n",
-    "        cout << \"Exception occurred: \" << error.what() << endl;\n",
+    "        cout << \"\\n\\nException occurred: \" << error.what() << endl;\n",
     "        cout << \"Exception handled\" << endl;\n",
     "    }\n",
     "}"
