update inheritance lect

--- a/notebooks/Inheritance.ipynb
+++ b/notebooks/Inheritance.ipynb
@@ -272,9 +272,6 @@
    "source": [
     "## Example: Community Member\n",
     "\n",
-    "<div>\n",
-    "<div style=\"width:50%; float: left; padding: 1em;\">\n",
-    "\n",
     "Let’s develop a simple inheritance hierarchy with five levels.\n",
     "\n",
     "- A university community has thousands of `CommunityMembers`.\n",
@@ -282,13 +279,7 @@
     "- `Faculty` are either `Administrators` or `Teachers`.\n",
     "- Some `Administrators`, however, are also `Teachers`.\n",
     "\n",
-    "We’ve used multiple inheritance to form class AdministratorTeacher.\n",
-    "</div>\n",
-    "<div style=\"width:50%; float: right;\">\n",
-    "    <img src=\"img/Inheritance1.png\"/>\n",
-    "</div>\n",
-    "</div>\n",
-    "\n"
+    "We've used multiple inheritance to form class AdministratorTeacher."
    ]
   },
   {
@@ -301,18 +292,21 @@
    "source": [
     "## Example: Community Member\n",
     "\n",
-    "<div>\n",
-    "<div style=\"width:50%; float: left; padding: 1em;\">\n",
+    "![Community Member](img/Inheritance1.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Example: Community Member\n",
     "\n",
     "- With **single inheritance**, a class is derived from **one base class**.\n",
-    "- With **multiple inheritance**, a derived class inherits simultaneously from **two or more (possibly unrelated) base classes**.\n",
-    "\n",
-    "</div>\n",
-    "<div style=\"width:50%; float: right;\">\n",
-    "    <img src=\"img/Inheritance1.png\"/>\n",
-    "</div>\n",
-    "</div>\n",
-    "\n"
+    "- With **multiple inheritance**, a derived class inherits simultaneously from **two or more (possibly unrelated) base classes**."
    ]
   },
   {
