--- a/notebooks/Inheritance.ipynb
+++ b/notebooks/Inheritance.ipynb
@@ -256,10 +256,9 @@
     }
    },
    "source": [
-    "## Example: Community Member\n",
+    "## Example: Community Member  (cont.)\n",
     "\n",
-    "![](img/Inheritance1.png)\n",
-    "\n"
+    "![](img/Inheritance1.png)"
    ]
   },
   {
@@ -270,7 +269,7 @@
     }
    },
    "source": [
-    "## Example: Community Member\n",
+    "## Example: Community Member (cont.)\n",
     "\n",
     "Let’s develop a simple inheritance hierarchy with five levels.\n",
     "\n",
@@ -290,55 +289,15 @@
     }
    },
    "source": [
-    "## Example: Community Member\n",
-    "\n",
-    "![Community Member](img/Inheritance1.png)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "## Example: Community Member\n",
+    "## Example: Community Member (cont.)\n",
     "\n",
     "- With **single inheritance**, a class is derived from **one base class**.\n",
-    "- With **multiple inheritance**, a derived class inherits simultaneously from **two or more (possibly unrelated) base classes**."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "## Example: Community Member\n",
-    "\n",
-    "<div>\n",
-    "<div style=\"width:50%; float: left; padding: 1em;\">\n",
+    "- With **multiple inheritance**, a derived class inherits simultaneously from **two or more (possibly unrelated) base classes**.\n",
     "\n",
     "Each arrow in the hierarchy represents an **is-a** relationship.\n",
     "- As we follow the arrows in this class hierarchy, we can state *an Employee is a CommunityMember* and *a Teacher is a Faculty member*.\n",
     "- `CommunityMember` is the **direct base class** of `Employee`, `Student` and `Alumnus`.\n",
-    "- `CommunityMember` is an **indirect base class** of all the other classes in the diagram.\n",
-    "\n",
-    "</div>\n",
-    "<div style=\"width:50%; float: right;\">\n",
-    "    <img src=\"img/Inheritance1.png\"/>\n",
-    "</div>\n",
-    "</div>\n",
-    "<div>\n",
-    "<div style=\"width:100%;float: left; padding: 1em;\">\n",
-    "Starting from the bottom, you can follow and apply the is-a relationship upto the topmost base class.\n",
-    "    \n",
-    "- An `AdministratorTeacher` is an `Administrator`, is a `Faculty` member, is an `Employee` and is a `CommunityMember`.\n",
-    "</div>\n",
-    "<div>"
+    "- `CommunityMember` is an **indirect base class** of all the other classes in the diagram.\n"
    ]
   },
   {
