updated website structure

--- a/notebooks/Classes.ipynb
+++ b/notebooks/Classes.ipynb
@@ -480,7 +480,7 @@
    "source": [
     "## Compilation and Linking Process\n",
     "\n",
-    "<img src=\"img/linking-process.png\" style=\"height:700px; margin: auto;padding-top:20px\"/>"
+    "<img src=\"../img/linking-process.png\" style=\"height:700px; margin: auto;padding-top:20px\"/>"
    ]
   },
   {
