--- a/notebooks/Into-to-OOP.ipynb
+++ b/notebooks/Into-to-OOP.ipynb
@@ -114,7 +114,7 @@
     "                </div>\n",
     "            </td>\n",
     "            <td style=\"width:60%; float: left;\">\n",
-    "                <img src=\"img/Hierarchies.png\"/>\n",
+    "                <img src=\"../img/Hierarchies.png\"/>\n",
     "            </td>\n",
     "        </tr>\n",
     "    </tbody>\n",
@@ -131,7 +131,7 @@
    "source": [
     "## Towards a higher level of abstraction\n",
     "\n",
-    "<img src=\"img/Layers-of-Abstraction.jpg\" style=\"width:800px;margin: auto;padding-top:20px\"/>"
+    "<img src=\"../img/Layers-of-Abstraction.jpg\" style=\"width:800px;margin: auto;padding-top:20px\"/>"
    ]
   },
   {
@@ -297,7 +297,7 @@
     "**Objects** are like **cookies**\n",
     "- they are instances of the class\n",
     "\n",
-    "<img src=\"img/Cookies.jpg\" style=\"width:500px;margin: auto;padding-top:20px\"/>\n",
+    "<img src=\"../img/Cookies.jpg\" style=\"width:500px;margin: auto;padding-top:20px\"/>\n",
     "\n",
     "Photograph courtesy of [Guillaume Brialon](https://www.flickr.com/photos/guillaumebrialon/3213750216/) on Flickr."
    ]
@@ -1250,7 +1250,7 @@
     "- In industry, UML diagrams help systems designers specify systems in a concise, graphical, programming-language-independent manner, before programmers implement the systems in specific programming languages.\n",
     "\n",
     "\n",
-    "<img src=\"img/UML-class-diagram.png\" style=\"width:800px;margin: auto;padding-top:20px\"/>"
+    "<img src=\"../img/UML-class-diagram.png\" style=\"width:800px;margin: auto;padding-top:20px\"/>"
    ]
   },
   {
